--- a/Capitulos/cap00.tex
+++ b/Capitulos/cap00.tex
@@ -214,17 +214,27 @@ C & \cdot & \cdot & \cdot & \cdot & \\
 
 Asignemos valores de verdad a las intersecciones: pondremos un $1$ si el conjunto de la fila pertenece al conjunto de la columna, y un $0$ en caso contrario. Supongamos, por ejemplo, que $A \notin A$ (diagonal es 0), $A \in B$, etc. Nuestra matriz de incidencia luciría así:
 
-\[
-\bordermatrix{
-  & A & B & C & D & E & \dots \cr
-A & \mathbf{0} & 0 & 0 & 1 & 0 & \dots \cr
-B & 1 & \mathbf{1} & 0 & 1 & 0 & \dots \cr
-C & 1 & 0 & \mathbf{0} & 1 & 1 & \dots \cr
-D & 0 & 0 & 1 & \mathbf{0} & 1 & \dots \cr
-E & 1 & 0 & 1 & 0 & \mathbf{1} & \dots \cr
-\vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots
-}
-\]
+
+\begin{center}
+\tikzset{every picture/.style={line width=0.75pt}}
+
+\begin{tikzpicture}[x=0.75pt,y=0.75pt,yscale=-1,xscale=1]
+% Text Node
+\draw (215,31.4) node [anchor=north west][inner sep=0.75pt]    {$
+\begin{array}{rcccccc}
+    & A & B & C & D & E & \cdots \\
+  A & \mathbf{0} & 0 & 0 & 1 & 0 & \cdots \\
+  B & 1 & \mathbf{1} & 0 & 1 & 0 & \cdots \\
+  C & 1 & 0 & \mathbf{0} & 1 & 1 & \cdots \\
+  D & 0 & 0 & 1 & \mathbf{0} & 1 & \cdots \\
+  E & 1 & 0 & 1 & 0 & \mathbf{1} & \cdots \\
+  \vdots & \vdots & \vdots & \vdots & \vdots & \vdots & \ddots
+\end{array}
+$};
+\end{tikzpicture}
+\end{center}
+
+
 
 Al igual que en el teorema anterior, nuestra atención se centra en la \textbf{diagonal principal} (marcada en negritas). Las entradas con valor $0$ en la diagonal corresponden a los conjuntos $X$ tales que $X \notin X$.
 La definición de $R$ es precisamente la instrucción de tomar esos casos: $R$ se define \enquote{invirtiendo} la diagonal principal.
